(library
  (name ocaml_typing)
  (public_name merlin-lib.ocaml_typing)
  (flags
   -open Ocaml_utils
   -open Ocaml_parsing
   -open Merlin_utils
   (:standard -w -9))
  (modules_without_implementation annot outcometree value_rec_types)
  (libraries merlin_utils ocaml_compression ocaml_parsing ocaml_utils))
